--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,59 +1,54 @@
 .project-card {
-    position: relative;
-    height: 23rem;
-    width: 30rem;
+    height: 20rem;
+    width: 25rem;
     border-radius: 5px;
+    position: relative;
+    overflow: hidden;
     transition: 0.2s;
 
     &:hover .card-overlay {
         height: 100%;
         visibility: visible;
+        opacity: 1;
     }
 
-    .card {
-        position: absolute;
-        height: 100%;
+    .img-div {
+        height: 75%;
         width: 100%;
-        border-radius: 5px;
+        overflow: hidden;
 
-        .img-div {
-            height: 80%;
+        img {
             width: 100%;
-            object-fit: contain;
-            overflow: hidden;
+            height: 100%;
+            border-radius: 5px 5px 0 0;
+            object-fit: cover;
+        }
+    }
 
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 5px 5px 0 0;
-            }
+    .card-text {
+        color: #fff;
+        background-color: #200E3A;
+        height: 25%;
+        border-radius: 0 0 5px 5px;
+        padding-top: 4px;
+
+        h2 {
+            margin-left: 10px;
+            color: #fff;
         }
 
-        .card-text {
-            color: #fff;
-            background-color: #200E3A;
-            height: 20%;
-            border-radius: 0 0 5px 5px;
+        .tags {
+            margin-left: 10px;
+            margin-top: 8px;
+            display: flex;
+            gap: 12px;
 
-            h2 {
-                margin-left: 10px;
+            p {
+                background-color: #9400FF;
                 color: #fff;
-            }
-
-            .tags {
-                margin-left: 10px;
-                margin-top: 8px;
-                display: flex;
-                gap: 12px;
-
-                p {
-                    background-color: #9400FF;
-                    color: #fff;
-                    padding: 4px 8px;
-                    border-radius: 12px;
-                    font-weight: 500;
-                    // letter-spacing: 1px;
-                }
+                padding: 4px 8px;
+                border-radius: 12px;
+                font-weight: 500;
             }
         }
     }
@@ -62,13 +57,12 @@
         position: absolute;
         top: 0;
         right: 0;
-        height: 0%;
+        height: 0;
         width: 100%;
         visibility: hidden;
-        background-color: rgb(0, 0, 0);
+        opacity: 0;
         background-color: rgba(0, 0, 0, 0.5);
-        // border-radius: 5px;
-        transition: 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+        transition: height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
 
         .overlay-content {
             position: absolute;
@@ -81,7 +75,7 @@
                 width: 2rem;
                 height: 2rem;
                 border-right: 20px solid transparent;
-                transition: 0.2s;
+                transition: fill 0.2s;
 
                 &:hover {
                     fill: #9400FF;
