--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -1,45 +1,42 @@
 .contact {
     height: 100%;
-    max-width: 1336px; //ye hatana hai
-    margin: auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 64px;
     gap: 60px;
+    margin: 10rem 0;
 
     .text-container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
 
         h1 {
             font-size: 100px;
             line-height: 90px;
-            // font-family: "Industry-Book";
-            // color: #5D12D2;
-            // color: #B931FC;
             color: #9400FF;
-            // color: #C21292;
-            // color: #711DB0; //ye
-            // color: #940B92;
         }
 
-        .text-item {
-            color: #fff;
+        .text-item-container {
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            margin-top: 40px;
 
-            span {
-                font-weight: 300;
+            .text-item {
+                color: #fff;
+
+                span {
+                    font-weight: 300;
+                }
             }
         }
     }
 
     .form-container {
-        flex: 1;
         position: relative;
+        width: 500px;
 
         .phone-icon {
             position: absolute;
-            stroke: #9400FF;
             margin: auto;
         }
 
@@ -67,6 +64,29 @@
                 background-color: #9400FF;
                 color: #fff;
                 font-weight: 500;
+            }
+        }
+    }
+}
+
+@media (width<1090px) {
+    .contact {
+        flex-direction: column;
+        padding: 0 16px;
+        gap: 100px;
+        margin-bottom: 200px;
+
+        .text-container {
+            h1 {
+                margin-top: 100px;
+                text-align: center;
+            }
+
+            .text-item-container {
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                margin-top: 80px;
             }
         }
     }
