--- a/src/sections/Skills/SkillsStyles.scss
+++ b/src/sections/Skills/SkillsStyles.scss
@@ -1,26 +1,41 @@
 .skills {
+    width: 80rem;
     height: 100vh;
-    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin: 0 auto;
 
+    .skills-1 {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
 
-    h1 {
-        color: #fff;
-        text-align: center;
-        margin-bottom: 4rem;
+        h1 {
+            font-size: 100px;
+            line-height: 90px;
+            color: #9400FF;
+        }
+
+        p {
+            color: #fff;
+        }
     }
 
-    .skills-container {
+    .skills-2 {
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
         gap: 2rem;
-        width: 52rem;
-        margin: 0 auto;
+        width: 60%;
 
         img {
             height: 5rem;
             width: 5rem;
         }
     }
-
 }
