--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -1,7 +1,9 @@
+@import "../../Constants.scss";
+
 .projects {
 
     h1 {
-        color: #fff;
+        color: $white;
         text-align: center;
     }
 
