--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,7 +1,9 @@
+@import "../../Constants.scss";
+
 .project-card {
     height: 20rem;
     width: 25rem;
-    border-radius: 5px;
+    border-radius: 0.313rem;
     position: relative;
     overflow: hidden;
     transition: 0.2s;
@@ -20,35 +22,38 @@
         img {
             width: 100%;
             height: 100%;
-            border-radius: 5px 5px 0 0;
+            border-radius: 0.313rem 0.313rem 0 0;
             object-fit: cover;
         }
     }
 
     .card-text {
-        color: #fff;
-        background-color: #200E3A;
+        color: $white;
+        background-color: $darkPurple;
         height: 25%;
-        border-radius: 0 0 5px 5px;
-        padding-top: 4px;
+        border-radius: 0 0 0.313rem 0.313rem;
+        padding-top: 0.5rem;
 
         h2 {
-            margin-left: 10px;
-            color: #fff;
+            margin-left: 0.625rem;
+            color: $white;
+            font-family: $font1;
+            font-weight: 500;
         }
 
         .tags {
-            margin-left: 10px;
-            margin-top: 8px;
+            margin-left: 0.625rem;
+            margin-top: 0.5rem;
             display: flex;
-            gap: 12px;
+            gap: 0.75rem;
 
             p {
-                background-color: #9400FF;
-                color: #fff;
-                padding: 4px 8px;
-                border-radius: 12px;
+                background-color: $lightPurple;
+                color: $white;
+                padding: 0.25rem 0.5rem;
+                border-radius: 0.75rem;
                 font-weight: 500;
+                font-family: $font2;
             }
         }
     }
@@ -71,19 +76,19 @@
             transform: translate(-50%, -50%);
 
             svg {
-                fill: #fff;
+                fill: $white;
                 width: 2rem;
                 height: 2rem;
-                border-right: 20px solid transparent;
+                border-right: 1.25rem solid transparent;
                 transition: fill 0.2s;
 
                 &:hover {
-                    fill: #9400FF;
+                    fill: $lightPurple;
                 }
             }
 
             a {
-                color: #fff;
+                color: $white;
             }
         }
     }
