--- a/src/sections/Skills/SkillsStyles.scss
+++ b/src/sections/Skills/SkillsStyles.scss
@@ -1,27 +1,31 @@
+@import "../../Constants.scss";
+
 .skills {
-    width: 80rem;
+    max-width: 80rem;
     height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 5rem;
     margin: 0 auto;
 
     .skills-1 {
         width: 40%;
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 2.5rem;
 
         h1 {
-            font-size: 100px;
-            line-height: 90px;
-            color: #9400FF;
+            font-size: 6.25rem;
+            line-height: 5.625rem;
+            font-family: $font1;
+            color: $lightPurple;
         }
 
         p {
-            color: #fff;
+            color: $white;
+            font-family: $font2;
         }
     }
 
@@ -31,11 +35,42 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 2rem;
-        width: 60%;
+        width: 50%;
 
         img {
             height: 5rem;
             width: 5rem;
+        }
+    }
+}
+
+@media (width<56.25rem) {
+    .skills {
+        flex-direction: column;
+
+        .skills-1 {
+            width: 90%;
+
+            h1 {
+                font-size: 6.25rem;
+                text-align: center;
+            }
+
+            p {
+                text-align: center;
+
+            }
+        }
+
+        .skills-2 {
+            width: 100%;
+            padding: 0 4%;
+            padding-bottom: 4%;
+
+            img {
+                height: 4rem;
+                width: 4rem;
+            }
         }
     }
 }
