--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -80,7 +80,7 @@
                 width: 2rem;
                 height: 2rem;
                 border-right: 1.25rem solid transparent;
-                transition: fill 0.2s;
+                transition: all 0.3s;
 
                 &:hover {
                     fill: $lightPurple;
