--- a/src/components/Navigator/Navigator.scss
+++ b/src/components/Navigator/Navigator.scss
@@ -7,7 +7,7 @@
     width: 100%;
 
     .navigator {
-        background-color: gray;
+        background-color: transparent;
         position: fixed;
         bottom: 4%;
         left: auto;
@@ -15,6 +15,7 @@
         padding: 1rem 2rem;
         border-radius: 2.5rem;
         z-index: 2;
+        border: 0.063rem solid $white;
 
         ul {
             display: flex;
@@ -25,26 +26,24 @@
             li {
                 cursor: pointer;
 
-
                 a {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     gap: 0.375rem;
-                    color: $black;
+                    color: $white;
+                    transition: all 0.3s;
 
                     &:hover {
                         color: $lightPurple;
-
-                        svg {
-                            fill: $lightPurple;
-                        }
                     }
 
                     svg {
-                        height: 2rem;
-                        width: 2rem;
-                        fill: $black;
+                        height: 1.5rem;
+                        width: 1.5rem;
+                        fill: $white;
+                        transition: all 0.3s;
+                        display: none;
                     }
 
                     p {
@@ -56,10 +55,6 @@
 
                 .active-link {
                     color: $lightPurple;
-
-                    svg {
-                        fill: $lightPurple;
-                    }
                 }
             }
         }
@@ -74,6 +69,8 @@
             bottom: 0%;
             width: 100%;
             border-radius: 0rem;
+            background-color: $black;
+            border: none;
 
             ul {
                 justify-content: space-between;
@@ -86,8 +83,7 @@
                         flex-direction: column;
 
                         svg {
-                            height: 1.5rem;
-                            width: 1.5rem;
+                            display: block;
                         }
 
                         p {
