--- a/src/sections/Home/HomeStyles.scss
+++ b/src/sections/Home/HomeStyles.scss
@@ -1,4 +1,90 @@
-.home h1 {
+@import "../../Constants.scss";
+
+.home {
     text-align: center;
-    color: #52D3D8  ;
+    color: $white;
+
+    .home-top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 5rem;
+        padding: 0 1rem;
+
+        img {
+            height: 2rem;
+            width: 2rem;
+        }
+    }
+
+    .home-middle {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: calc(80vh - 5rem);
+
+        h1 {
+            font-size: 3rem;
+            color: $white;
+            font-family: $font1;
+
+            span {
+                font-family: $font1;
+                color: $lightPurple;
+                font-size: 4rem;
+            }
+        }
+
+        h2 {
+            font-family: $font1;
+            font-size: 4.6rem;
+            line-height: 5.625rem;
+            -webkit-text-stroke-width: 0.1rem;
+            -webkit-text-stroke-color: $lightPurple;
+            color: transparent;
+
+            &::selection {
+                background-color: $lightPurple;
+                color: $white;
+            }
+        }
+
+        p {
+            margin: 1rem 0;
+            width: 60%;
+            text-align: center;
+            font-size: 1.1rem;
+            font-family: $font2;
+            line-height: 1.8rem;
+            padding-bottom: 1.5rem;
+        }
+
+        .home-btns {
+            display: flex;
+            gap: 3rem;
+        }
+    }
+
+    .home-side {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        position: absolute;
+        right: 2%;
+
+        a {
+
+            svg {
+                fill: $white;
+                height: 1.4rem;
+                width: 1.4rem;
+                transition: all 0.3s;
+
+                &:hover {
+                    fill: $lightPurple;
+                }
+            }
+        }
+    }
 }
