--- a/src/sections/Stack/StackStyles.scss
+++ b/src/sections/Stack/StackStyles.scss
@@ -1,6 +1,6 @@
 @import "../../Constants.scss";
 
-.skills {
+.stack {
     max-width: 80rem;
     height: 100vh;
     display: flex;
@@ -10,7 +10,7 @@
     gap: 5rem;
     margin: 0 auto;
 
-    .skills-1 {
+    .stack-1 {
         width: 40%;
         display: flex;
         flex-direction: column;
@@ -29,7 +29,7 @@
         }
     }
 
-    .skills-2 {
+    .stack-2 {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -45,10 +45,10 @@
 }
 
 @media (width<56.25rem) {
-    .skills {
+    .stack {
         flex-direction: column;
 
-        .skills-1 {
+        .stack-1 {
             width: 90%;
 
             h1 {
@@ -58,14 +58,13 @@
 
             p {
                 text-align: center;
-
             }
         }
 
-        .skills-2 {
+        .stack-2 {
             width: 100%;
             padding: 0 4%;
-            padding-bottom: 4%;
+            padding-bottom: 8%;
 
             img {
                 height: 4rem;
