--- a/src/sections/Home/HomeStyles.scss
+++ b/src/sections/Home/HomeStyles.scss
@@ -22,7 +22,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: calc(80vh - 5rem);
+        // height: 36rem;
+        min-height: calc(80vh - 5rem);
 
         h1 {
             font-size: 3rem;
@@ -52,7 +53,7 @@
 
         p {
             margin: 1rem 0;
-            width: 60%;
+            width: 64%;
             text-align: center;
             font-size: 1.1rem;
             font-family: $font2;
@@ -72,6 +73,7 @@
         gap: 1rem;
         position: absolute;
         right: 2%;
+        bottom: 16%;
 
         a {
 
