--- a/src/Constants.scss
+++ b/src/Constants.scss
@@ -1,10 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-$white: #ffffff;
+$white: #FFFFFF;
 $black: #000000;
+
 $darkPurple: #200E3A;
 $lightPurple: #9400FF;
+$yellow: #DDFF00;
 
-$font1: "Roboto", sans-serif;
-$font2: "Montserrat", sans-serif;
+$grey1: #CCCCCC;
+$grey2: #7D7F78;
+$grey3: #161616;
+$grey4: #262626;
+
+$font1: "Poppins", sans-serif;
+$font2: "Inter", sans-serif;
