--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -2,18 +2,20 @@
 
 .home {
     text-align: center;
-    color: $white;
+    min-height: 100vh;
+    width: 100%;
 
     .home-top {
         display: flex;
         align-items: center;
         justify-content: space-between;
         height: 5rem;
-        padding: 0 1rem;
+        padding: 2rem;
 
         img {
-            height: 2rem;
-            width: 2rem;
+            height: 3rem;
+            width: 3rem;
+            cursor: pointer;
         }
     }
 
@@ -21,44 +23,31 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        // height: 36rem;
         min-height: calc(80vh - 5rem);
+        margin-top: 5rem;
 
         h1 {
-            font-size: 3rem;
-            color: $white;
+            font-size: 4rem;
+            color: $grey1;
             font-family: $font1;
-
-            span {
-                font-family: $font1;
-                color: $lightPurple;
-                font-size: 4rem;
-            }
-        }
-
-        h2 {
-            font-family: $font1;
-            font-size: 4.6rem;
-            line-height: 5.625rem;
-            -webkit-text-stroke-width: 0.1rem;
-            -webkit-text-stroke-color: $lightPurple;
-            color: transparent;
-
-            &::selection {
-                background-color: $lightPurple;
-                color: $white;
-            }
+            font-weight: 500;
+            line-height: 4.4rem;
         }
 
         p {
-            margin: 1rem 0;
-            width: 64%;
+            margin-top: 2rem;
+            width: 30rem;
             text-align: center;
             font-size: 1.1rem;
             font-family: $font2;
-            line-height: 1.8rem;
-            padding-bottom: 1.5rem;
+            color: $grey2;
+            line-height: 1.6rem;
+            padding-bottom: 1.58rem;
+
+            // background: linear-gradient(red, blue);
+            // -webkit-background-clip: text;
+            // background-clip: text;
+            // -webkit-text-fill-color: transparent;
         }
 
         .home-btns {
@@ -73,7 +62,7 @@
         gap: 1rem;
         position: absolute;
         right: 2%;
-        bottom: 16%;
+        bottom: 22%;
 
         a {
 
@@ -86,6 +75,29 @@
                 &:hover {
                     fill: $lightPurple;
                 }
+            }
+        }
+    }
+}
+
+@media (width<970px) {
+    .home {
+        min-height: 80vh;
+
+        .home-middle {
+            h1 {
+
+                span {
+                    font-size: 3rem;
+                }
+            }
+
+            h2 {
+                font-size: 3.8rem;
+            }
+
+            p {
+                width: 90%;
             }
         }
     }
