--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -1,10 +1,11 @@
 @import "../../Constants.scss";
 
 .projects {
+    margin: 0 auto;
 
     h1 {
-        color: $white;
         text-align: center;
+        margin-bottom: 4rem;
     }
 
     .container {
@@ -13,6 +14,5 @@
         align-items: center;
         justify-content: center;
         gap: 3rem;
-        margin-top: 5rem;
     }
 }
