--- a/src/sections/Stack/Stack.scss
+++ b/src/sections/Stack/Stack.scss
@@ -1,41 +1,36 @@
 @import "../../Constants.scss";
 
 .stack {
-    max-width: 80rem;
-    height: 100vh;
+    // height: 100vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
     margin: 0 auto;
 
     .stack-1 {
-        width: 40%;
+        width: 50%;
         display: flex;
         flex-direction: column;
-        gap: 2.5rem;
-
-        h1 {
-            font-size: 6.25rem;
-            line-height: 5.625rem;
-            font-family: $font1;
-            color: $lightPurple;
-        }
 
         p {
-            color: $white;
-            font-family: $font2;
+            color: $grey1;
+            font-family: $font1;
+            font-size: 2.75rem;
+            text-align: center;
+            margin-top: 1rem;
+            line-height: 1.3;
         }
     }
 
     .stack-2 {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         gap: 2rem;
-        width: 50%;
+        margin-top: 3rem;
 
         img {
             height: 5rem;
@@ -47,12 +42,12 @@
 @media (width<56.25rem) {
     .stack {
         flex-direction: column;
+        width: 100%;
 
         .stack-1 {
             width: 90%;
 
             h1 {
-                font-size: 6.25rem;
                 text-align: center;
             }
 
@@ -62,7 +57,8 @@
         }
 
         .stack-2 {
-            width: 100%;
+            background-color: #fff;
+            width: 92%;
             padding: 0 4%;
             padding-bottom: 8%;
 
