--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,7 +9,7 @@
     font-weight: 450;
     font-family: $font1;
     font-size: 1rem;
-    color: $black;
+    color: $grey3;
     border-radius: 2rem;
 }
 
