--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,12 +1,14 @@
 @import "../../Constants.scss";
 
 .project-card {
-    height: 20rem;
-    width: 25rem;
-    border-radius: 0.313rem;
-    position: relative;
-    overflow: hidden;
-    transition: 0.2s;
+    height: 25rem;
+    width: 60rem;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(16, 16, 16);
+    background: linear-gradient(135deg, rgba(25, 25, 25, 1) 0%, rgba(16, 16, 16, 1) 100%);
 
     &:hover .card-overlay {
         height: 100%;
@@ -15,46 +17,55 @@
     }
 
     .img-div {
-        height: 75%;
-        width: 100%;
+        height: 100%;
+        width: 54%;
         overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        img {
-            width: 100%;
-            height: 100%;
-            border-radius: 0.313rem 0.313rem 0 0;
-            object-fit: cover;
+
+        .img-overlay {
+            width: 86%;
+            height: 70%;
+            border-radius: 1rem;
+            position: relative;
+            overflow: hidden;
+            transition: 0.2s;
+
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 1rem;
+                object-fit: cover;
+            }
         }
     }
 
     .card-text {
-        color: $white;
-        background-color: $darkPurple;
-        height: 25%;
-        border-radius: 0 0 0.313rem 0.313rem;
-        padding-top: 0.5rem;
+        height: 100%;
+        width: 46%;
+        margin-top: 6rem;
 
-        h2 {
-            margin-left: 0.625rem;
-            color: $white;
+        h3 {
+            color: $grey1;
             font-family: $font1;
             font-weight: 500;
+            font-size: 2.5rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+            font-family: $font2;
+            color: $grey2;
+            line-height: 1.6rem;
         }
 
         .tags {
-            margin-left: 0.625rem;
-            margin-top: 0.5rem;
+            margin-top: 1.5rem;
             display: flex;
-            gap: 0.75rem;
-
-            p {
-                background-color: $lightPurple;
-                color: $white;
-                padding: 0.25rem 0.5rem;
-                border-radius: 0.75rem;
-                font-weight: 500;
-                font-family: $font2;
-            }
+            flex-wrap: wrap;
+            gap: 1.5rem;
         }
     }
 
@@ -76,19 +87,19 @@
             transform: translate(-50%, -50%);
 
             svg {
-                fill: $white;
+                fill: $grey1;
                 width: 2rem;
                 height: 2rem;
                 border-right: 1.25rem solid transparent;
                 transition: all 0.3s;
 
                 &:hover {
-                    fill: $lightPurple;
+                    fill: $grey2;
                 }
             }
 
             a {
-                color: $white;
+                color: $grey1;
             }
         }
     }
