--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,7 +1,7 @@
 @import "../../Constants.scss";
 
 .about {
-    height: 80vh;
+    // height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
