--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -3,43 +3,41 @@
 .contact {
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 4rem;
-    gap: 3.75rem;
-    min-height: 100vh;
+    padding: 4rem 0;
+    gap: 5rem;
 
     .text-container {
 
         .text-item-container {
             display: flex;
-            flex-direction: column;
-            gap: 2.5rem;
-            margin-top: 2.5rem;
+            flex-direction: row;
+            gap: 4rem;
+            margin-top: 4rem;
 
             .text-item {
-                color: $white;
+                color: $grey1;
 
                 h2 {
+                    font-size: 2.75rem;
                     font-family: $font1;
+                    font-weight: 400;
+                    color: $grey1;
+                    line-height: 1.3;
                 }
 
                 span {
                     font-weight: 400;
                     font-family: $font2;
+                    color: $grey2;
                 }
             }
         }
     }
 
     .form-container {
-        position: relative;
-        width: 31.25rem;
-
-        .phone-icon {
-            position: absolute;
-            margin: auto;
-        }
+        width: 30rem;
 
         form {
             display: flex;
@@ -49,36 +47,13 @@
             input,
             textarea {
                 padding: 1.25rem;
-                background-color: transparent;
-                color: $white;
-                border: 0.063rem solid $white;
+                color: $grey1;
                 border-radius: 2rem;
                 resize: none;
                 outline: none;
                 font-family: $font2;
-            }
-        }
-    }
-}
-
-@media (width<68.125rem) {
-    .contact {
-        flex-direction: column;
-        padding: 0 1rem;
-        gap: 6.25rem;
-        margin-bottom: 7.5rem;
-
-        .text-container {
-            h1 {
-                margin-top: 6.25rem;
-                text-align: center;
-            }
-
-            .text-item-container {
-                flex-direction: row;
-                align-items: center;
-                justify-content: center;
-                margin-top: 5rem;
+                background-color: $grey3;
+                border: 0.1px solid $grey4;
             }
         }
     }
