--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -3,16 +3,12 @@
 .projects {
     margin: 0 auto;
 
-    h1 {
-        text-align: center;
-        margin-bottom: 4rem;
-    }
-
     .container {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 3rem;
+        gap: 4rem;
+        margin-top: 4rem;
     }
 }
