--- a/src/sections/Stack/Stack.scss
+++ b/src/sections/Stack/Stack.scss
@@ -7,6 +7,8 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    padding-top: 10rem;
+    padding-bottom: 8rem;
 
     .stack-1 {
         width: 50%;
