--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 @import "./Constants.scss";
 
 html {
@@ -8,7 +7,7 @@ html {
 }
 
 * {
-    font-family: 'Dosis', sans-serif;
+    font-family: sans-serif;
     text-decoration: none;
     list-style: none;
     padding: 0;
