--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -14,12 +14,37 @@
         font-size: 2.75rem;
         font-family: $font1;
         color: $grey2;
-        width: 60%;
+        width: 990px;
         line-height: 1.3;
 
         span {
             font-family: $font1;
             color: $grey1;
+        }
+    }
+}
+
+@media (width<1000px) {
+    .about {
+        p {
+            width: 90%;
+        }
+    }
+}
+
+@media (width<820px) {
+    .about {
+        p {
+            font-size: 2rem;
+        }
+    }
+}
+
+@media (width<600px) {
+    .about {
+        p {
+            font-size: 1.5rem;
+            text-align: left;
         }
     }
 }
