--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -10,7 +10,10 @@
         align-items: center;
         justify-content: space-between;
         height: 5rem;
-        padding: 2rem;
+        max-width: 90rem;
+        // background-color: #fff;
+        margin: 2rem auto;
+        padding: 0 1rem;
 
         img {
             height: 5rem;
@@ -57,13 +60,13 @@
     }
 }
 
-@media (width<970px) {
+@media (width<960px) {
     .home {
         min-height: 80vh;
 
         .home-middle {
-            h1 {
 
+            h1 {
                 span {
                     font-size: 3rem;
                 }
@@ -71,10 +74,6 @@
 
             h2 {
                 font-size: 3.8rem;
-            }
-
-            p {
-                width: 90%;
             }
         }
     }
