--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,12 +1,12 @@
 @import "../../Constants.scss";
 
 .about {
-    // height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 4rem 0;
 
     p {
         margin-top: 1rem;
@@ -42,6 +42,8 @@
 
 @media (width<600px) {
     .about {
+        padding: 2rem 0;
+
         p {
             font-size: 1.5rem;
             text-align: left;
