--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -2,6 +2,7 @@
 
 .projects {
     margin: 0 auto;
+    padding: 4rem 0;
 
     .container {
         display: flex;
@@ -10,5 +11,11 @@
         justify-content: center;
         gap: 4rem;
         margin-top: 4rem;
+    }
+}
+
+@media (width<600px) {
+    .projects {
+        padding: 2rem 0;
     }
 }
