--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -25,15 +25,19 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-height: calc(80vh - 5rem);
-        margin-top: 5rem;
+        // min-height: calc(80vh - 5rem);
+        margin-top: 8rem;
+        margin-bottom: 6rem;
 
         h1 {
             font-size: 4rem;
-            color: $grey1;
             font-family: $font1;
             font-weight: 500;
             line-height: 4.4rem;
+            background-image: linear-gradient(2005deg, rgb(255, 255, 247) 8.55094%, rgb(114, 114, 103) 107.012%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         p {
@@ -45,11 +49,6 @@
             color: $grey2;
             line-height: 1.6rem;
             padding-bottom: 1.58rem;
-
-            // background: linear-gradient(red, blue);
-            // -webkit-background-clip: text;
-            // background-clip: text;
-            // -webkit-text-fill-color: transparent;
         }
 
         .home-btns {
@@ -61,6 +60,8 @@
 
 @media (width<700px) {
     .home {
+        min-height: 76vh;
+
         .home-middle {
             h1 {
                 font-size: 3rem;
@@ -88,6 +89,8 @@
 
 @media (width<500px) {
     .home {
+        min-height: 66vh;
+
         .home-middle {
             h1 {
                 font-size: 2rem;
