--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -89,7 +89,7 @@
 
 @media (width<500px) {
     .home {
-        min-height: 66vh;
+        // min-height: 66vh;
 
         .home-middle {
             h1 {
