--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import "../../Constants.scss";
 
 .loader {
@@ -42,13 +43,13 @@
         }
 
         rect {
-            stroke-dasharray: (256 / 4 * 3) (256 / 4) (256 / 4 * 3) (256 / 4);
+            stroke-dasharray: (math.div(256, 4) * 3) (math.div(256, 4)) (math.div(256, 4) * 3) (math.div(256, 4));
             stroke-dashoffset: 0;
             animation: pathRect 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
         }
 
         circle {
-            stroke-dasharray: (200 / 4 * 3) (200 / 4) (200 / 4 * 3) (200 / 4);
+            stroke-dasharray: (math.div(200, 4) * 3) (math.div(200, 4)) (math.div(200, 4) * 3) (math.div(200, 4));
             stroke-dashoffset: 75;
             animation: pathCircle var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
         }
